--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "ef164b20-0cac-4744-ae0f-401c88febeb3",
-  "name": "Fix DimensioncSets On G/L Entries",
+  "name": "Fix Dimension Set On G/L Entries",
   "publisher": "Katson.com",
   "version": "1.0.0.0",
   "brief": "",
